# 2025_sanchez_phenoseeker

./: README.md  pyproject.toml
configs/: config_extraction.yaml  config_test_all_norms.yaml  create_profiles.yaml
data/: EGFR.cys  EGFR_inhibitors.cys  G2M.cys  G2M_with_inhibitors.cys  G2M_with_inhibitors_compressed.cys  not_in_chembl_lit_pcba.csv
docs/: bioproxy_evaluator.md  embedding_manager.md
notebooks/: fig_1_maps.ipynb  fig_1_maps_selection.ipynb  fig_1_umap.ipynb  fig_2_bioproxy_and_sup_13.ipynb  fig_3_a.ipynb  fig_cliffs_murcko.ipynb  sup_fig_18.ipynb  sup_fig_20_21.ipynb  sup_fig_22_23.ipynb  sup_fig_24_bioproxy.ipynb
scripts/: create_profiles.py  explore_lit_PCBA.py  extract_features.py  get_chembl_activities.py
src/phenoseeker/: embedding_manager.py  utils.py
tmp_publi/: Genes_EF.ipynb  bioproxy_figures.ipynb  fig5.ipynb  fig_3_Tanimoto_screen.ipynb  fig_chem_diversity.ipynb  fig_norms copy 2.ipynb  fig_norms copy.ipynb  fig_norms.ipynb  fig_norms_encoders.ipynb  pathways.ipynb  pathways_fig.ipynb  pathways_max.py
